Fixed instructions and mute button alignment bug for sm and xs screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -63,9 +63,9 @@ body {
             background: none;
             border: none;
             margin-top: 5px;
+            margin-left: 0;
+            margin-right: 0;
             padding: 0;
-            margin-left: 10px;
-            margin-right: 10px;
         }
     }
     .btn:hover,
